# vault-health

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 001-cli-first-architecture.md  002-seven-epistemic-operators.md  003-tracer-bullet-strategy.md  004-module-import-aliasing.md
src/vault_health/: __init__.py
src/vault_health/cli/: main.py
src/vault_health/core/: vault.py
src/vault_health/engine/: broken.py  coherence.py  connectivity.py  depth.py  orphan.py  recency.py  width.py
src/vault_health/output/: reports.py  terminal.py
tests/unit/: test_vault.py
