[project]
name = "vault-health"
version = "0.1.0"
description = "Epistemic Calculus CLI — measure and improve your knowledge vault health"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Rastislav Drahoš & Hermes Agent"},
]
keywords = ["knowledge-management", "obsidian", "epistemic-calculus", "cli"]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
vh = "vault_health.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["typer", "rich.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vault_health.cli.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
